# epPlex

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEVELOPMENT.md  README.md  next-seo-config.ts  next.config.js  package.json  start.sh  tsconfig.json
app/: .env.example  .env.production  .prettierignore  .prettierrc  next-seo-config.ts  next.config.js  package.json  tsconfig.json
app/client/: burgerProgram.ts  constants.ts  coreProgram.ts  program.ts  program2.ts  shdwProgram.ts  token22.ts
app/client/idl/: ephemerality.json  ephemeralityTypes.ts  epplexBurgerTypes.ts  epplexCoreTypes.ts  epplexMetadataTypes.ts  epplexMintTypes.ts  epplex_burger.json  epplex_core.json  epplex_metadata.json  epplex_mint.json
app/client/types/: epNFT.ts  helperTypes.ts  programTypes.ts  token2022Interface.ts  token22.ts  tokenMetadata.ts  wlToken.ts
app/pages/: 404.tsx  _app.tsx  _document.tsx  demo.tsx  index.tsx
app/pages/api/: create.ts
app/public/: manifest.json
app/services/: backend.ts
app/src/assets/: palette.ts  theme.ts
app/src/hooks/: useIsMounted.tsx
app/src/providers/: MyWalletProvider.tsx  ProgramApisProvider.tsx
app/src/styles/: fonts.css  globals.scss  palette.ts  (+1 more)
app/utils/: general.ts  nftMetadata.txt  solana.ts  token2022.ts
client/idl/: ephemerality.json  ephemeralityTypes.ts
client/types/: programTypes.ts
idls/: wen_royalty_distribution.json
models/: price.ts  product.ts
pages/: 404.tsx  _app.tsx  index.tsx
programs/ep-mint/: Cargo.toml
programs/ephemeral-metadata/: Cargo.toml
programs/ephemerality/: Cargo.toml
programs/ephemerality/src/: errors.rs  id.rs  instructions.rs  lib.rs  security.rs
programs/ephemerality/src/actions/: collection_create.rs  mint_token.rs  mint_token_from_collection.rs  mod.rs  program_delegate_close.rs  program_delegate_create.rs  token_burn.rs  token_create.rs  token_create_from_collection.rs  token_renew.rs
programs/ephemerality/src/program_wrappers/: mod.rs  token_2022.rs
programs/ephemerality/src/state/: collection_config.rs  ephemeral_state.rs  global_collection_config.rs  mint22.rs  mod.rs  program_delegate.rs  sizes.rs  token.rs
programs/ephemerality/tests/: test.rs
programs/epplex-burger/: Cargo.toml
programs/epplex-burger/src/: errors.rs  events.rs  id.rs  lib.rs  token_utils.rs
programs/epplex-burger/src/actions/: add_ephemeral_data.rs  collection_mint.rs  create_ephemeral_rule.rs  ephemeral_data_add.rs  ephemeral_rule_create.rs  game_close.rs  game_create.rs  game_end.rs  game_evaluate.rs  game_start.rs  game_transition.rs  game_update.rs  init_mint_guard.rs  mod.rs  program_delegate_close.rs  program_delegate_create.rs  token_burn.rs  token_buy.rs  token_delist.rs  token_freeze.rs  token_game_burn.rs  token_game_freeze.rs  token_game_immunity.rs  token_game_reset.rs  token_game_vote.rs  token_mint.rs  token_renew.rs  token_sell.rs  token_thaw.rs  token_update.rs  vote_cast.rs  whitelist_mint.rs  wns_group_mint.rs  wns_member_mint.rs  wns_member_process.rs  wns_mint.rs
programs/epplex-burger/src/state/: admin.rs  burger_metadata.rs  ephemeral_state.rs  game_config.rs  member.rs  mod.rs  program_delegate.rs  royalties.rs
programs/epplex-burger/src/utils/: game_utils.rs  metadata_utils.rs  mod.rs  token_utils.rs
programs/epplex-core/: Cargo.toml
programs/epplex-core/src/: errors.rs  id.rs  instructions.rs  lib.rs  token2022.rs
programs/epplex-core/src/actions/: collection_close.rs  collection_create.rs  collection_mint.rs  global_collection_config_close.rs  global_collection_config_create.rs  membership_append.rs  membership_burn.rs  membership_create.rs  membership_wns_burn.rs  mod.rs  program_delegate_create.rs  rule_manage.rs  time_manage.rs  token_burn.rs  token_create.rs  token_mint.rs  token_renew.rs
programs/epplex-core/src/state/: collection_config.rs  ephemeral_data.rs  ephemeral_rule.rs  global_collection_config.rs  mint.rs  mint22.rs  mod.rs  program_delegate.rs
programs/epplex-core/src/utils/: common.rs  mint.rs  mod.rs  token_utils.rs  utils.rs
programs/epplex-metadata/: Cargo.toml
programs/epplex-metadata/src/: id.rs  lib.rs  metadata_update_utils.rs  utils.rs
programs/epplex-metadata/src/actions/: create_metadata.rs  metadata_create.rs  metadata_create_separate.rs  metadata_update.rs  mod.rs
programs/epplex-metadata/src/state/: mod.rs  token_metadata.rs
programs/epplex-mint/: Cargo.toml
programs/epplex-shared/: Cargo.toml
programs/epplex-shared/src/: id.rs  lib.rs
programs/epplex-shared/src/program_wrappers/: associated_token.rs  mod.rs  token_2022.rs
programs/epplex-shared/src/state/: mod.rs  sizes.rs
programs/epplex-shared/src/utils/: admin.rs  anchor.rs  misc.rs  mod.rs  token_utils.rs
programs/wen_new_standard/: Cargo.toml
programs/wen_new_standard/src/: lib.rs
programs/wen_new_standard/src/instructions/mint/: create.rs
programs/wen_new_standard/src/instructions/royalty/: execute.rs
programs/wen_royalty_distribution/: Cargo.toml
programs/wen_royalty_distribution/src/: lib.rs  state.rs
script/: mintPoolSetup.ts  notes.txt  package.json  program.ts  replace_ids.ts  scripts.ts  setup.ts  tsconfig.json  wns_devnet.ts  wns_local.ts
script/instructions/: generic.ts
script/state/: token22.ts
script/utils/: airdrop.ts  helpers.ts
src/assets/: fonts.ts  palette.ts  theme.ts
src/providers/: CustomThemeProvider.tsx
src/styles/: globals.scss  palette.module.scss  palette.scss  style.module.scss  style.scss
src/utils/: motion.ts
tests/: basic.spec.ts  createInitializeTokenMetadataInstruction.ts  ep-mint.ts  mintGuard.spec.ts  mintUtils.ts  notes.txt  pda.ts  program.ts  setup.ts  testCollection.ts  testCollectionMint.ts  testIndividualMint.ts  testSetup.ts  testUtils.ts  tsconfig.json
tests/.local_keys/: mintAuth.json  payer.json  permDelegate.json
tests/instructions/: createInitializeMetadataPointerInstruction.ts  createInitializeTokenMetadataInstruction.ts  generic.ts  tokenMetadataInstructions.ts  updateTokenMetadataInstruction.ts
tests/state/: token22.ts
tests/utils/: helpers.ts  mintUtils.ts  testUtils.ts
(+81 files in other folders)
