[workspace]
members = [
    "programs/*"
]

resolver = "2"


# WNS stuff
[profile.release]
overflow-checks = true

[workspace.dependencies]
anchor-lang = { version = "0.30.0", features = ["interface-instructions", "init-if-needed"]  }
anchor-spl = { version = "0.30.0", features = ["token_2022_extensions", "token_2022"] }