[workspace]
members = [
    "programs/*"
]

resolver = "2"


# WNS stuff
[profile.release]
overflow-checks = true

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", sha = "827c986618358c177a50c22ff8eb08bae6943784", features = [
  "init-if-needed",
  "interface-instructions",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", sha = "827c986618358c177a50c22ff8eb08bae6943784", features = ["token_2022_extensions", "token_2022"] }
# anchor-lang = { version = "0.30.0", features = ["interface-instructions", "init-if-needed"]  }
# anchor-spl = { version = "0.30.0", features = ["token_2022_extensions", "token_2022"] }