[package]
name = "ephemerality"
version = "0.0.1"
description = "Ephemeral NFT creation"
authors = ["Burger Bob twitter.com/burger606"]
license = "Apache-2.0"
homepage = ""
edition = "2021"
keywords = ["blockchain", "rust", "solana"]

[features]
mainnet = []

[dependencies]
anchor-lang = { version = "^0.26.0" }
anchor-spl = "^0.26.0"
bytemuck = "1.7.2"
solana-program = "~1.14.16"
solana-security-txt = "1.0.1"

[lib]
name = "ephemerality"
crate-type = ["cdylib", "lib"]
doctest = false
