[package]
name = "ephemerality"
version = "0.0.1"
description = "Ephemeral NFT creation"
authors = ["Burger Bob twitter.com/burger606"]
license = "Apache-2.0"
homepage = ""
edition = "2021"
keywords = ["blockchain", "rust", "solana"]

[features]
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0"}
anchor-spl = { version = "0.29.0"}
bytemuck = "1.7.2"
solana-program = "1.14.12"
spl-token-2022 = {version = "0.9.0", features = ["no-entrypoint"] }
solana-security-txt = "1.0.1"
spl-token-metadata-interface = "0.2.0"
mpl-token-metadata = { version = "1.11", features = ["no-entrypoint"] }
ahash = "=0.8.6"

[lib]
name = "ephemerality"
crate-type = ["cdylib", "lib"]
doctest = false
