[package]
name = "epplex-burger"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "epplex_burger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"] }
epplex-core = { path = "../epplex-core", features = ["cpi"] }
epplex-shared = { path = "../epplex-shared", features=["no-entrypoint"] }
ahash = "=0.8.6"
spl-token-metadata-interface = "0.2.0"
solana-program = "=1.17"
#chacha20poly1305 = "=0.9.1"