[package]
name = "epplex-core"
version = "0.1.0"
description = "Ephemeral NFT creation"
authors = ["Burger Bob twitter.com/burger606"]
license = "Apache-2.0"
homepage = ""
edition = "2021"
keywords = ["blockchain", "rust", "solana"]

[lib]
name = "epplex_core"
crate-type = ["cdylib", "lib"]
doctest = false

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["interface-instructions", "init-if-needed"]  }
anchor-spl = { version = "0.30.0", features = ["token_2022_extensions", "token_2022"] }
# anchor-lang = { git = "https://github.com/bridgesplit/anchor.git", features = ["interface-instructions", "init-if-needed"] }
# anchor-spl = { git = "https://github.com/bridgesplit/anchor.git", features = ["token_2022_extensions", "token_2022"] }

# spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
# solana-program = "=1.18.2"
epplex-shared = { path = "../epplex-shared", features=["no-entrypoint"] }
solana-security-txt = "1.0.1"
# spl-token-metadata-interface = "0.3.3"
ahash = "=0.8.6"


wen_new_standard = { git = "https://github.com/wen-community/wen-new-standard.git", features = ["no-entrypoint", "cpi"] }
wen_royalty_distribution = { git = "https://github.com/wen-community/wen-new-standard.git", features = ["no-entrypoint", "cpi"] }