[package]
name = "epplex-core"
version = "0.1.0"
description = "Ephemeral NFT creation"
authors = ["Burger Bob twitter.com/burger606"]
license = "Apache-2.0"
homepage = ""
edition = "2021"
keywords = ["blockchain", "rust", "solana"]

[lib]
name = "epplex_core"
crate-type = ["cdylib", "lib"]
doctest = false

[features]
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "epplex-shared/idl-build",
    "wen_new_standard/idl-build",
    "wen_royalty_distribution/idl-build"
]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
wen_new_standard.workspace = true
wen_royalty_distribution.workspace = true

epplex-shared = { path = "../epplex-shared", features=["no-entrypoint"] }
solana-security-txt = "1.0.1"
ahash = "=0.8.6"

