[package]
name = "epplex-metadata"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "epplex_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
epplex-shared = { path = "../epplex-shared", features=["no-entrypoint"] }
spl-pod = "0.1.0"
solana-program = "=1.17"
ahash = "=0.8.6"
spl-token-metadata-interface = "0.2.0"
spl-type-length-value = "0.3.0"