[package]
name = "epplex-shared"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "epplex_shared"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = { version = "0.29.0" }
anchor-lang = { git = "https://github.com/bridgesplit/anchor.git", features = ["interface-instructions", "init-if-needed"] }

solana-program = "=1.17"
ahash = "=0.8.6"
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"