[package]
name = "epplex-shared"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "epplex_shared"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
mainnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["interface-instructions", "init-if-needed"]  }
anchor-spl = { version = "0.30.0", features = ["token_2022_extensions", "token_2022"] }
# anchor-lang = { git = "https://github.com/bridgesplit/anchor.git", features = ["interface-instructions", "init-if-needed"] }

solana-program = "=1.18.8"
ahash = "=0.8.6"
# spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"] }
# spl-token-metadata-interface = "0.2.0"