[package]
name = "wen_new_standard"
version = "0.3.2-alpha"
description = "An open and composable NFT standard on Solana."
edition = "2021"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_new_standard"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

# This depends on a fork of Anchor, while determining the best course of
# action to merge Anchor support for these tools, we have added the
# compiled Anchor binaries to the root of this directory.
[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
# anchor-lang = { version = "0.30.0", features = ["interface-instructions", "init-if-needed"]  }
# anchor-spl = { version = "0.30.0", features = ["token_2022_extensions", "token_2022"] }

wen_royalty_distribution = { path = "../wen_royalty_distribution", features = ["cpi"] }
spl-pod = "=0.2.2"
spl-transfer-hook-interface = { version = "0.5.0" }
spl-tlv-account-resolution = "0.4.0"
spl-token-metadata-interface = "=0.2"
