[package]
name = "wen_royalty_distribution"
version = "0.2.0-alpha"
description = "Distribution program for WNS royalties"
edition = "2018"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_royalty_distribution"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
# anchor-lang = { version = "0.30.0", features = ["interface-instructions", "init-if-needed"]  }
# anchor-spl = { version = "0.30.0", features = ["token_2022_extensions", "token_2022"] }

spl-transfer-hook-interface = { version = "0.5.0" }
spl-tlv-account-resolution = "0.4.0"
spl-pod = "=0.2.2"